# todo-tui

./: Cargo.toml  README.md
src/: app.rs  main.rs  theme.rs
src/handlers/: input.rs
src/models/: list.rs  mod.rs  storage.rs  task.rs
src/ui/: mod.rs
src/ui/screens/: list_editor.rs  list_overview.rs  mod.rs  move_task.rs  my_day.rs  note_editor.rs  task_editor.rs  task_list.rs
src/utils/: date_utils.rs
todo-data/: lists.csv  tasks.csv  tasks.csv.backup
