[package]
name = "todo-tui"
version = "0.1.0"
edition = "2021"
description = "A Terminal User Interface (TUI) todo application with vim-like navigation"

[dependencies]
ratatui = "0.24"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
